--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
   "name": "rollup-starter-lib",
   "version": "1.0.0",
-  "main": "dist/how-long-till-lunch.cjs.js",
-  "module": "dist/how-long-till-lunch.esm.js",
-  "browser": "dist/how-long-till-lunch.umd.js",
+  "main": "dist/moe-cross-tabs.cjs.js",
+  "module": "dist/moe-cross-tabs.esm.js",
+  "browser": "dist/moe-cross-tabs.umd.js",
   "dependencies": {
     "ms": "^2.0.0"
   },
